--- a/packages/sherlock/src/Sherlock.css
+++ b/packages/sherlock/src/Sherlock.css
@@ -11,7 +11,30 @@
   opacity: 1;
   background-color: var(--highlight-color);
 }
-
+.sherlock button {
+  background: white;
+  border-radius: 999px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition:
+    all 200ms ease-in-out,
+    scale 100ms ease,
+    box-shadow 100ms ease;
+  text-decoration: none;
+  position: relative;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  scale: 1;
+  text-shadow: none;
+  box-shadow: none;
+}
+.sherlock__input-group {
+  border: 1px #bbb solid;
+  padding: 0.5em;
+  border-radius: 999em;
+}
+.sherlock__container {
+  padding-bottom: 1em;
+}
 .sherlock__match-dropdown {
   width: var(--width);
   background-color: #fff;
@@ -19,6 +42,9 @@
   font-size: 12px;
   position: absolute;
   z-index: 9999;
+  margin-top: 0.5rem;
+  border-radius: 0.5em;
+  overflow: hidden;
 }
 .sherlock__matches {
   display: block;
@@ -27,12 +53,13 @@
   margin-bottom: 0;
 }
 .sherlock__match-item {
-  padding: 2px 12px;
+  padding: 0.5em 12px;
   display: flex;
   justify-content: space-between;
 }
 .sherlock mark {
   padding: 0;
+  background-color: #ffdc00;
 }
 .sherlock__match-item:hover,
 .sherlock__match-item--selected {
