--- a/packages/sherlock/src/Sherlock.css
+++ b/packages/sherlock/src/Sherlock.css
@@ -13,6 +13,7 @@
 }
 .sherlock button {
   background: white;
+  border: 0;
   border-radius: 999px;
   font-size: 1rem;
   cursor: pointer;
@@ -32,17 +33,23 @@
   padding: 0.5em;
   border-radius: 999em;
 }
+.sherlock input {
+  outline: none;
+  border: 0;
+  font-size: 1em;
+}
 .sherlock__container {
   padding-bottom: 1em;
+  white-space: nowrap;
 }
 .sherlock__match-dropdown {
-  width: var(--width);
+  width: calc(var(--width) - 50px);
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   font-size: 12px;
   position: absolute;
   z-index: 9999;
-  margin-top: 0.5rem;
+  margin: 0.5rem;
   border-radius: 0.5em;
   overflow: hidden;
 }
@@ -50,7 +57,8 @@
   display: block;
   width: 100%;
   padding-inline-start: 0;
-  margin-bottom: 0;
+  margin: 0;
+  font-size: 1.2em;
 }
 .sherlock__match-item {
   padding: 0.5em 12px;
